// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gardener-dashboard vpa should render the template with default values 1`] = `
Object {
  "apiVersion": "autoscaling.k8s.io/v1beta2",
  "kind": "VerticalPodAutoscaler",
  "metadata": Object {
    "labels": Object {
      "app.kubernetes.io/component": "dashboard",
      "app.kubernetes.io/instance": "gardener-dashboard",
      "app.kubernetes.io/managed-by": "Helm",
      "app.kubernetes.io/name": "gardener-dashboard",
      "helm.sh/chart": "gardener-dashboard-runtime-0.1.0",
    },
    "name": "gardener-dashboard-vpa",
    "namespace": "garden",
  },
  "spec": Object {
    "resourcePolicy": Object {
      "containerPolicies": Array [
        Object {
          "containerName": "*",
          "controlledResources": Array [
            "cpu",
            "memory",
          ],
          "controlledValues": "RequestsOnly",
          "maxAllowed": Object {
            "cpu": "500m",
            "memory": "500Mi",
          },
          "minAllowed": Object {
            "cpu": "50m",
            "memory": "100Mi",
          },
        },
      ],
    },
    "targetRef": Object {
      "apiVersion": "apps/v1",
      "kind": "Deployment",
      "name": "gardener-dashboard",
    },
    "updatePolicy": Object {
      "updateMode": "Off",
    },
  },
}
`;

exports[`gardener-dashboard vpa should render the template with overwritten values 1`] = `
Object {
  "apiVersion": "autoscaling.k8s.io/v1beta2",
  "kind": "VerticalPodAutoscaler",
  "metadata": Object {
    "labels": Object {
      "app.kubernetes.io/component": "dashboard",
      "app.kubernetes.io/instance": "gardener-dashboard",
      "app.kubernetes.io/managed-by": "Helm",
      "app.kubernetes.io/name": "gardener-dashboard",
      "helm.sh/chart": "gardener-dashboard-runtime-0.1.0",
    },
    "name": "gardener-dashboard-vpa",
    "namespace": "garden",
  },
  "spec": Object {
    "resourcePolicy": Object {
      "containerPolicies": Array [
        Object {
          "containerName": "*",
          "controlledResources": Array [
            "cpu",
            "memory",
          ],
          "controlledValues": "RequestsAndLimits",
          "maxAllowed": Object {
            "cpu": "1000m",
            "memory": "1200Mi",
          },
          "minAllowed": Object {
            "cpu": "30m",
            "memory": "60Mi",
          },
        },
      ],
    },
    "targetRef": Object {
      "apiVersion": "apps/v1",
      "kind": "Deployment",
      "name": "gardener-dashboard",
    },
    "updatePolicy": Object {
      "updateMode": "Auto",
    },
  },
}
`;
